--- a/src/main/webapp/css/popuo-box.css
+++ b/src/main/webapp/css/popuo-box.css
@@ -488,20 +488,12 @@ button::-moz-focus-inner {
 .login input[type="text"],.login input[type="password"]{
 	width:90%;
 	padding:5px;
-	margin:3px 0;x
+	margin:3px 0;
 	border: 1px solid #a63d56;
 	outline: none !important;
 }
-.signup input[type="text"]{
-	width: 44.5%;
-	padding: 5px;
-	margin: 10px 0;
-	font-size: 14px;
-	outline: none;
-	background: #EBEBEB;
-	border: solid 1px #222;
-}
-.signup input.email[type="text"],.signup input[type="password"]{
+
+.signup input[type="text"],.signup input[type="password"]{
   width: 90%;
   padding: 10px;
   background: #FFF;
@@ -840,7 +832,7 @@ button::-moz-focus-inner {
   text-align: center;
 }
 .video-information-text p{
-	color: ##525254;
+	color:#525254;
 	margin: 1em 0;
 	font-size: 14px;
 	line-height: 1.8em;	
