登录功能实现（完整）

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -109,7 +109,7 @@ form.navbar-form.navbar-right {
   float: left;
   margin: 1.1em 0 0 1em;
 }
-.signin a{
+.signin a,span{
 	padding: 8px 20px;
     background: #21DEEF;
     color: #FFF;
@@ -121,12 +121,12 @@ form.navbar-form.navbar-right {
     -o-border-radius: 3px;
     -ms-border-radius: 3px;
 }
-.signin a:hover{
+.signin a:hover,span:hover{
 	text-decoration:none;
 	color:#272C2E;
 	background:#F7F7F7;
 }
-.signin a:focus {
+.signin a:focus,span:focus{
     outline: none;
 }
 .main {
